6.0: ?/?/2021
	* ALL: Added support for java 7.  Dropped support for Java 6.
	* ALL: Migrated to supporting AutoCloseable.  Most close() methods now throw Exception not IOException.
	* CORE: Removed some @Deprecated methods that had been with us for a while.
	* CORE: Added closeable-spliterator for better handing of JDK8+ streams.  Thanks to zhemaituk.
	* JDBC: ormlite-jdbc jar now includes the -core classes.  No need to import ormlite-core jar anymore.
	* JDBC: Fixed exceptions in some JDBC drivers when working with chars.  Thanks to Bo98.
	* ANDROID: ormlite-android jar now includes the -core classes.  No need to import ormlite-core jar anymore.

5.7: 11/7/2021
	* CORE: Fixed possible thread issue around field-name lookups.  Thanks to dlew.
	* CORE: Fixed a number of flaky tests based on field order. Thanks CharlesZKQ, NanaOkada, hwang-pku, and chimo173.
	* CORE: Upgraded SimpleLogging code to fix annoying startup messages.  Thanks to JayDi85.
	* CORE: Removed broken getCreateTableStatements(DatabaseType, ...). ConnectionSource needed. Thanks to blacatena.
	* CORE: Added WrappedConnectionSource and other support classes for tracing unclosed connections and statements.
	* CORE: Added better support for JDK8+ streams with lazy foreign collections.  Thanks to zhemaituk.
	* ANDROID: Fixed bug in number rows affected with executeUpdateDelete() in newer API versions.  Thanks to WonShaw.

5.6: 6/22/2021
	* CORE: Added support for @Entity storing of Serializable types.  Thanks to arn-cpu.
	* CORE: Fixed a bug with nonreentrant handling of DateFormat with the string date types.  Thanks to Bob Lacatena.
	* ANDROID: Removed the reflection hack support for pre-ice-cream-sandwich annotation performance.

5.5: 5/23/2021
	* CORE: Added support for java.util.Currency.  Thanks to juur. 
	* ANDROID: Fixed bug in AndroidLogBackend.  Thanks to sanderderks.

5.4: 5/18/2021
	* CORE: Added LoggerFactory.setLogFactory() for supporting other log implementations and added NullLog.